# sp1-contract-call

./: .env.example  .gitignore  .gitmodules  Cargo.toml  Justfile  README.md  example.env  rust-toolchain
.github/workflows/: book.yml  pr.yml
book/: docusaurus.config.ts  package-lock.json  package.json  pnpm-lock.yaml
book/docs/: custom-chains.md  events.md  examples.md  execution-model.md  getting-started.md  index.md  proof-verification.md  rpc-configuration.md
contracts/: remappings.txt
contracts/src/: ContractCall.sol
crates/client-executor/: Cargo.toml
crates/client-executor/src/: anchor.rs  errors.rs  io.rs  lib.rs
crates/client-executor/src/events/: events_input.rs  logs_input.rs  mod.rs
crates/host-executor/: Cargo.toml
crates/host-executor/src/: anchor_builder.rs  beacon_client.rs  errors.rs  events.rs  lib.rs  mpt.rs  sketch.rs  sketch_builder.rs  test.rs
crates/host-executor/src/beacon/: client.rs  mod.rs  signed_beacon_block.rs
crates/host-executor/tests/: anchor.rs
examples/ecdsa/: SimpleStaking.sol
examples/ecdsa/client/: Cargo.toml
examples/ecdsa/client/src/: main.rs
examples/ecdsa/contracts/: Test.sol
examples/ecdsa/host/: Cargo.toml
examples/ecdsa/host/src/: main.rs
examples/events/client/: Cargo.toml
examples/events/client/src/: decoded.rs  lib.rs  main.rs  metadata.rs
examples/events/host/: Cargo.toml  build.rs
examples/events/host/src/: main.rs
examples/example-deploy/host/: Cargo.toml
examples/example-deploy/host/src/: main.rs
examples/multiplexer/: README.md  ZkOracleHelper.sol
examples/multiplexer/client/: Cargo.toml
examples/multiplexer/client/src/: main.rs
examples/multiplexer/host/: Cargo.toml
examples/multiplexer/host/src/: main.rs
examples/optimism/client/: Cargo.toml
examples/optimism/client/src/: main.rs
examples/optimism/host/: Cargo.toml
examples/optimism/host/src/: main.rs
examples/uniswap/client/: Cargo.toml
examples/uniswap/client/src/: main.rs
examples/uniswap/contracts/: README.md  foundry.toml  remappings.txt
examples/uniswap/contracts/src/: Counter.sol  UniswapCall.sol
examples/uniswap/contracts/src/fixtures/: plonk-fixture.json
examples/uniswap/contracts/test/: Counter.t.sol  UniswapCall.t.sol
examples/uniswap/host/: Cargo.toml  build.rs
examples/uniswap/host/src/: basic.rs  main.rs  onchain_verify.rs
examples/verify-quorum/: SimpleStaking.sol
examples/verify-quorum/client/: Cargo.toml
examples/verify-quorum/client/src/: main.rs
examples/verify-quorum/host/: Cargo.toml  build.rs
examples/verify-quorum/host/src/: main.rs
