[package]
name = "sp1-cc-client-executor"
description = ""
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
eyre.workspace = true
serde.workspace = true
sha2.workspace = true
serde_with = "3.12.0"
thiserror.workspace = true

# rsp
rsp-witness-db.workspace = true
rsp-primitives.workspace = true
rsp-client-executor.workspace = true
rsp-mpt.workspace = true

# reth
reth-chainspec.workspace = true
reth-primitives.workspace = true
reth-evm.workspace = true
reth-evm-ethereum.workspace = true

# revm
revm.workspace = true
revm-primitives.workspace = true

# alloy
alloy-consensus = { workspace = true, features = ["serde", "serde-bincode-compat"] }
alloy-eips.workspace = true
alloy-sol-types.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types = { workspace = true }
alloy-rpc-types-eth = { workspace = true, features = ["serde"] }
alloy-evm.workspace = true
alloy-serde.workspace = true
alloy-trie.workspace = true

[dev-dependencies]
