[package]
name = "sp1-cc-client-executor"
description = ""
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
eyre.workspace = true
serde.workspace = true
sha2.workspace = true
serde_with = "3.12.0"
thiserror.workspace = true

# rsp
rsp-witness-db.workspace = true
rsp-primitives.workspace = true
rsp-client-executor.workspace = true
rsp-mpt.workspace = true

# reth
reth-chainspec.workspace = true
reth-consensus.workspace = true
reth-ethereum-consensus.workspace = true
reth-evm.workspace = true
reth-evm-ethereum.workspace = true
reth-primitives.workspace = true
reth-optimism-chainspec = { workspace = true, optional = true }
reth-optimism-consensus = { workspace = true, optional = true }
reth-optimism-evm = { workspace = true, optional = true }
reth-optimism-primitives = { workspace = true, optional = true, features = ["serde", "serde-bincode-compat"]}

# revm
revm.workspace = true
revm-primitives.workspace = true
op-revm = { workspace = true, optional = true }

# alloy
alloy-consensus = { workspace = true, features = ["serde", "serde-bincode-compat"] }
alloy-eips.workspace = true
alloy-sol-types.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types = { workspace = true }
alloy-rpc-types-eth = { workspace = true, features = ["serde"] }
alloy-evm.workspace = true
alloy-op-evm = { workspace = true, optional = true }
alloy-serde.workspace = true
alloy-trie.workspace = true

[features]
optimism = [
    "dep:alloy-op-evm",
    "dep:op-revm",
    "dep:reth-optimism-chainspec",
    "dep:reth-optimism-consensus",
    "dep:reth-optimism-evm",
    "dep:reth-optimism-primitives",
    "rsp-primitives/optimism"
]