[package]
name = "sp1-cc-host-executor"
description = ""
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
eyre.workspace = true
url.workspace = true
tokio.workspace = true
tracing.workspace = true

# workspace
sp1-cc-client-executor.workspace = true

# rsp
rsp-rpc-db.workspace = true
rsp-primitives.workspace = true
rsp-mpt.workspace = true
reth-primitives = { workspace = true, features = ["secp256k1"] }

# revm
revm.workspace = true
revm-primitives.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-transport.workspace = true
alloy-sol-macro.workspace = true
alloy-sol-types.workspace = true
alloy-rpc-types.workspace = true

[dev-dependencies]
alloy-primitives.workspace = true
tracing-subscriber = "0.3.18"
bincode = "1.3.3"
dotenv.workspace = true
