[workspace.package]
[package]
name = "ecdsa-client"
description = ""
edition = "2021"

[dependencies]
# workspace
sp1-cc-client-executor = { path = "../../../crates/client-executor" }

# alloy
alloy-primitives = { version = "0.8" }
alloy-sol-types = { version = "0.8" }
alloy-sol-macro = { version = "0.8" }

# EVM
revm = { version = "14.0.0", features = ["serde"], default-features = false }

# sp1
sp1-zkvm = "1.2.0-rc2"

# reth
reth-primitives = { git = "https://github.com/sp1-patches/reth", tag = "rsp-20240830", default-features = false, features = [
    "alloy-compat",
    "optimism",
    "std",
] }

# misc
bincode = "1.3.3"
secp256k1  = { version = "0.29" , features = ["global-context", "recovery", "std"]}
rand_core = "0.6.4"
rand_chacha = "0.3.1"