[workspace.package]
[package]
name = "ecdsa-client"
description = ""
edition = "2021"

[dependencies]
# workspace
sp1-cc-client-executor = { path = "../../../crates/client-executor" }

# alloy
alloy-primitives = { version = "0.8" }
alloy-sol-types = { version = "0.8" }
alloy-sol-macro = { version = "0.8" }

# EVM
revm = { version = "14.0.0", features = ["serde"], default-features = false }

# sp1
sp1-zkvm = "1.2.0-rc2"

# misc
bincode = "1.3.3"
secp256k1 = { version = "0.29", features = ["recovery", "global-context", "rand"]}
rand_core = "0.6.4"
rand_chacha = "0.3.1"

[patch.crates-io]
secp256k1 = { git = "https://github.com/sp1-patches/rust-secp256k1", branch = "patch-secp256k1-v0.29.0" }
