[package]
version = "0.1.0"
name = "uniswap"
edition = "2021"

[dependencies]
# workspace
sp1-cc-host-executor = { path = "../../../crates/host-executor" }
sp1-cc-client-executor = { path = "../../../crates/client-executor" }

alloy-primitives.workspace = true
alloy-sol-types.workspace = true
alloy-rpc-types.workspace = true
alloy-sol-macro.workspace = true
alloy-provider.workspace = true
# Alloy host dependencies
alloy.workspace = true

# EVM
revm.workspace = true

# RSP
rsp-rpc-db.workspace = true

# misc:
url.workspace = true
tokio.workspace = true
eyre.workspace = true
bincode.workspace = true

# sp1
sp1-sdk = "1.2.0-rc2"

[build-dependencies]
sp1-helper = "1.2.0-rc2"

[features]
default = []
cuda = ["sp1-sdk/cuda"]

