[package]
version = "0.1.0"
name = "ecdsa"
edition = "2021"

[dependencies]
# workspace
sp1-cc-host-executor = { path = "../../../crates/host-executor" }
sp1-cc-client-executor = { path = "../../../crates/client-executor" }

alloy-primitives.workspace = true
alloy-sol-types.workspace = true
alloy-rpc-types.workspace = true
alloy-sol-macro.workspace = true
alloy-provider.workspace = true
alloy-transport.workspace = true
# Alloy host dependencies
alloy.workspace = true

# EVM
revm.workspace = true

# reth
reth-primitives.workspace = true

# RSP
rsp-rpc-db.workspace = true

# misc:
url.workspace = true
tokio.workspace = true
eyre.workspace = true
bincode.workspace = true
secp256k1  = { version = "0.29" , features = ["global-context", "recovery", "std"]}
rand_core = "0.6.4"
rand_chacha = "0.3.1"

# sp1
sp1-sdk = "1.2.0-rc2"

[build-dependencies]
sp1-helper = "1.2.0-rc2"

[features]
default = []
cuda = ["sp1-sdk/cuda"]

