[package]
version = "0.1.0"
name = "example-deploy"
edition = "2021"

[dependencies]
# workspace
sp1-cc-host-executor = { path = "../../../crates/host-executor" }
sp1-cc-client-executor = { path = "../../../crates/client-executor" }

alloy-primitives.workspace = true
alloy-sol-types.workspace = true
alloy-rpc-types.workspace = true
alloy-sol-macro.workspace = true
alloy-provider.workspace = true
alloy.workspace = true

# reth
reth-primitives.workspace = true

# misc:
url.workspace = true
tokio.workspace = true
eyre.workspace = true
bincode.workspace = true
secp256k1 = { version = "0.29", features = ["recovery", "global-context", "rand"]}
rand_core = "0.6.4"
rand_chacha = "0.3.1"
dotenv = "0.15.0"

# sp1
sp1-sdk = "2.0.0"

[build-dependencies]
sp1-helper = "2.0.0"

[features]
default = []
cuda = ["sp1-sdk/cuda"]

