[workspace.package]
[package]
name = "multiplexer-client"
description = ""
edition = "2021"

[dependencies]
# workspace
sp1-cc-client-executor = { path = "../../../crates/client-executor" }

# alloy
alloy-primitives = { version = "0.8" }
alloy-sol-types = { version = "0.8" }
alloy-sol-macro = { version = "0.8" }

# sp1
sp1-zkvm = "4.0.0-rc.11"

# misc
bincode = "1.3.3"
