[workspace.package]
[package]
name = "uniswap-client"
description = ""
edition = "2021"

[dependencies]
# workspace
sp1-cc-client-executor = { path = "../../../crates/client-executor" }

# alloy
alloy-primitives = { version = "0.8" }
alloy-sol-types = { version = "0.8" }
alloy-sol-macro = { version = "0.8" }

# EVM
revm = { version = "14.0.0", features = ["serde"], default-features = false }

# sp1
sp1-zkvm = "1.2.0-rc2"

# misc
bincode = "1.3.3"
