[workspace.package]
[package]
name = "uniswap-client"
description = ""
edition = "2021"

[dependencies]
# workspace
# sp1-cc-client-executor = { git = "https://github.com/succinctlabs/sp1-contract-call", branch = "main" }

sp1-cc-client-executor = { git = "https://github.com/succinctlabs/sp1-contract-call", branch = "main" }


# alloy
alloy-primitives = { version = "0.8" }
alloy-sol-types = { version = "0.8" }
alloy-sol-macro = { version = "0.8" }

# sp1
sp1-zkvm = "3.0.0"

# misc
bincode = "1.3.3"
