[package]
name = "uniswap-client"
description = ""
edition = "2021"

[dependencies]
# workspace
sp1-cc-client-executor = { path = "../../../crates/client-executor" }

# alloy
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-sol-types.workspace = true
alloy-sol-macro.workspace = true

# sp1
sp1-zkvm.workspace = true

# misc
bincode = "1.3.3"
