[package]
version = "0.1.0"
name = "uniswap"
edition = "2021"

[dependencies]
# workspace
# sp1-cc-host-executor = { path = "../../../crates/host-executor" }
# sp1-cc-client-executor = { path = "../../../crates/client-executor" }

sp1-cc-host-executor = { git = "https://github.com/succinctlabs/sp1-contract-call", branch = "main" }
sp1-cc-client-executor = { git = "https://github.com/succinctlabs/sp1-contract-call", branch = "main" }

alloy-primitives.workspace = true
alloy-sol-types.workspace = true
alloy-rpc-types.workspace = true
alloy-sol-macro.workspace = true
alloy-provider.workspace = true
# Alloy host dependencies
alloy.workspace = true

# misc:
url.workspace = true
tokio.workspace = true
eyre.workspace = true
bincode.workspace = true
serde.workspace = true
serde_json.workspace = true
clap = { version = "4.0", features = ["derive"] }

# sp1
sp1-sdk = "3.0.0"


[build-dependencies]
sp1-helper = "3.0.0"


[features]
default = []
cuda = ["sp1-sdk/cuda"]

