[package]
version = "0.1.0"
name = "uniswap"
edition = "2021"

[dependencies]
# workspace
sp1-cc-host-executor = { path = "../../../crates/host-executor" }
sp1-cc-client-executor = { path = "../../../crates/client-executor" }

alloy-primitives.workspace = true
alloy-sol-types.workspace = true
alloy-rpc-types.workspace = true
alloy-sol-macro.workspace = true
alloy-provider.workspace = true
# Alloy host dependencies
alloy.workspace = true

# misc:
url.workspace = true
tokio.workspace = true
eyre.workspace = true
bincode.workspace = true
serde.workspace = true
serde_json.workspace = true
dotenv.workspace = true
clap = { version = "4.0", features = ["derive"] }

# sp1
sp1-sdk.workspace = true


[build-dependencies]
sp1-build.workspace = true


[features]
default = []
cuda = ["sp1-sdk/cuda"]

